lib/brevity/parsing/file/string.treetop
module Brevity

grammar String
  rule string
    dq_str / sq_str
  end
  
  rule sq_str
    '"' contents:((!'"' .)*) '"' <StringNode>
  end
  
  rule dq_str
    "'" contents:((!"'" .)*) "'" <StringNode>
  end
end

end
